<resources>
    <string name="app_name">Time Manager</string>
    <string name="title">Название</string>
    <string name="date_start">Дата начала</string>
    <string name="plan_time">Планируемое время</string>
    <string name="add">Добавить</string>
    <string name="running_hours">Выполняется:</string>
    <string name="hours_left">Осталось:</string>
    <string name="run_now">ВЫПОЛНЯТЬ СЕЙЧАС</string>
    <string name="read_more">ПОДРОБНЕЕ</string>
    <string name="tasks_activity_title">Мои занятия</string>
    <string name="add_task_activity_title">Новое занятие</string>
    <string name="task_activity_title">Подробнее</string>
    <string name="date_deadline">Крайний срок</string>
    <string name="run">Выполнять</string>
    <string name="complete">Завершить</string>
    <string name="start">Старт</string>
    <string name="next">Далее</string>
    <string name="cancel">Отмена</string>
    <string name="process">Процесс выполнения:</string>
    <string name="time">Время:</string>
    <string name="status">Статус:</string>
    <string name="run_task_activity_title">Выполнение занятия</string>
    <string name="stop">Стоп</string>
    <string name="yes">Да</string>
    <string name="completion_task">Завершение занятия</string>
    <string name="completion_task_dialog_text">Текущее время будет добавлено к занятию.</string>
    <string name="how_work">Оценка эффективности</string>
    <string name="ready">Готово</string>
    <string name="not_yet_started">Ещё не начиналось</string>
    <string name="no_time_limit">Нет срока</string>
    <string name="deleting_task">Удаление занятия</string>
    <string name="deleting_task_dialog_text">Вы уверены, что хотите удалить занятие?</string>
    <string name="save">Сохранить</string>
    <string name="edit_task_activity_title">Редактирование</string>
    <string name="success_edit">Занятие изменено</string>
    <string name="delete">Удалить</string>
    <string name="success_delete">Занятие удалено</string>
    <string name="add_description">Добавить описание</string>
    <string name="difficulty_level">Уровень сложности</string>
    <string name="deadlines">Сроки</string>
    <string name="adding_description">Описание</string>
    <string name="description">Описание:</string>
    <string name="description_hint">Опишите свое занятие</string>
    <string name="day">День</string>
    <string name="start2">Начало</string>
    <string name="end">Завершение</string>
    <string name="not_specified">Не указан</string>
    <string name="completed">Завершено</string>
    <string name="finish">Финиш</string>
    <string name="category">Категория</string>
    <string name="label">Метка</string>
    <string name="completion_task_edittext_hint">Опишите, что вы сделали в течение этого времени</string>
    <string name="new_label">Новая метка</string>
</resources>
