<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        style="@style/MainLayout"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout">
            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                style="@style/EditText"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/TextInputLayout">
                <EditText
                    android:id="@+id/etPlanTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plan_time"
                    style="@style/EditText"
                    android:inputType="number"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerTimeUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Spinner"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="0dp"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_start"
                style="@style/TvEditText"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:text="—"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="#333333"
                android:layout_marginTop="3dp"/>
            <TextView
                android:id="@+id/tvDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_deadline"
                style="@style/TvEditText"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="14sp"
            android:textColor="#FF0000"/>
    </LinearLayout>
</ScrollView>
